# python-multiline

./: dummy.sh  multiline.py  pyproject.toml
multiline/: __init__.py  plainwriter.py  ttywriter.py  writer.py  xterm.py
multiline/frontends/: __init__.py  multiline.py  singleline.py
