[tool.poetry]
name = "python-multiline"
version = "0.1.0"
description = "multiline CLI display library"
authors = ["Eicke Herbertz <wolletd@posteo.de>"]
license = "MIT"
packages = [ { include = "multiline" } ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
